--- a/htmlejercicio3/ejercicio3.css
+++ b/htmlejercicio3/ejercicio3.css
@@ -1,12 +1,12 @@
 :root {
-  --color-primary: #7b68a6;
-  --color-secondary: #8b7d9b;
+  --color-primary: #c8b7f0;
+  --color-secondary: #7406f1;
   --color-success: #7d9b8a;
   --color-info: #7d8a9b;
   --color-background: #aedcf7;
   --color-surface: #3a3542;
-  --color-text: #0817eba6;
-  --color-text-secondary: #b8b6bb;
+  --color-text: #050505a6;
+  --color-text-secondary: #050505;
   --color-border: #4a4552;
 }
 
@@ -25,6 +25,7 @@ body {
 }
 
 .container {
+  color: #11cbe4;
   max-width: 12000px;
   margin: 0 auto;
   padding: 20px;
@@ -59,19 +60,6 @@ body {
   color: var(--color-text-secondary);
 }
 
-.intro-section,
-.form-section,
-.course-content,
-.features-section,
-.action-section {
-  background-color: var(--color-surface);
-  padding: 40px;
-  margin-bottom: 30px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(240, 7, 7, 0.2);
-  border: 1px solid var(--color-border);
-}
-
 h2 {
   font-size: 2.2em;
   margin-bottom: 20px;
@@ -80,26 +68,9 @@ h2 {
   padding-bottom: 10px;
 }
 
-h3 {
-  font-size: 1.6em;
-  color: var(--color-secondary);
-  margin-bottom: 12px;
-}
-
-h4 {
-  font-size: 1.3em;
-  color: var(--color-accent);
-  margin-bottom: 10px;
-}
-
-p {
-  margin-bottom: 15px;
-  color: var(--color-text-secondary);
-  font-size: 1.05em;
-}
 button {
   cursor: pointer;
-  border: lineStyle;
+  border: 1px solid var(--color-border);
   padding: 14px 28px;
   border-radius: 8px;
   font-size: 1.05em;
@@ -120,4 +91,48 @@ button {
   color: var(--color-text-secondary);
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(123, 104, 166, 0.4);
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+  color: var(--color-text);
+}
+
+li {
+  padding: 8px;
+  border-bottom: 1px solid var(--color-tarea-borde);
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+li:hover {
+  background-color: var(--color-tarea-hover);
+}
+
+.done {
+  text-decoration: line-through;
+  color: var(--color-tarea-hecha);
+}
+.notificacion {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background: #eb04df;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  animation: aparecer 0.3s ease;
+  font-family: Arial, sans-serif;
+}
+.aparecer {
+  from {
+    opacity: 10;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
